[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow"
version = "0.1.0"
description = "Parallel pipeline execution framework with dependency management."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["pipeline", "parallel", "dag", "tasks", "workflow", "scheduling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = []          # stdlib only – no third-party runtime deps

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = false
timeout = 30

[tool.setuptools.packages.find]
where = ["."]
include = ["taskflow*"]
